chore: apply general updates and improvements
